# kingso

./: README.md  install_config.sh  kingso.spec  run.sh
src/analysis/: configure.ac
src/analysis/include/: Analyzer.h  BasisDef.h  CommonAlgorithm.h  GBK_T2GBK_S.h  GBK_T2GBK_SFilter.h  HashMap.h  InnerWordItem.h  LowerCaseFilter.h  Makefile.am  MemHeap.h  MetaCharAnalyzer.h  MetaCharTokenizer.h  NormalizeFilter.h  SpecialWordItem.h  StopFilter.h  StringUtility.h  Token.h  TokenFilter.h  TokenStream.h  Tokenizer.h  UnityFilter.h  UpperCaseFilter.h
src/analysis/src/: GBK_T2GBK_SFilter.cpp  HashMap.cpp  InnerWordItem.cpp  LowerCaseFilter.cpp  Makefile.am  MemHeap.c  MetaCharAnalyzer.cpp  MetaCharTokenizer.cpp  NormalizeFilter.cpp  SpecialWordItem.cpp  StopFilter.cpp  StringUtility.cpp  UnityFilter.cpp  UpperCaseFilter.cpp  charset_func.c
src/analysis/test/: Makefile.am  test.cpp
src/commdef/: configure.ac
src/commdef/include/: Makefile.am
src/commdef/include/commdef/: ClusterResult.h  Makefile.am  SearchResult.h  SourceFilter.h  TokenizerFactory.h  commdef.h
src/commdef/src/: Makefile.am  SourceFilter.cpp
src/commdef/src/docmessage/: DocIndexMessage.proto  DocMessage.proto  Makefile.am
src/commdef/src/resultformat/: KSResult.proto  Makefile.am
src/commonlib/clustermap/: configure.ac
src/commonlib/clustermap/conf/: cm.xml
src/commonlib/clustermap/src/: CMClient.cpp  CMClient.h  CMClient.lo  CMClientInterface.cpp  CMClientInterface.h  CMClientLocal.cpp  CMClientLocal.h  CMClientNodeInfoMain.cpp  CMClientRemote.cpp  CMClientRemote.h  CMNode.cpp  CMNode.h  CMServer.cpp  CMServer.h  CMTCPClient.cpp  CMTCPClient.h  CMTCPServer.cpp  CMTCPServer.h  CMTree.cpp  CMTree.h  CMWatchPoint.cpp  CMWatchPoint.h  CMWebServerMain.cpp  ClusterServerMain.cpp  DGramClient.cpp  DGramClient.h  DGramCommon.cpp  DGramCommon.h  DGramServer.cpp  DGramServer.h  Makefile.am  WebClient.cpp  cm_sync.sh  kingso_cm.pb.cc  kingso_cm.pb.h  kingso_cm.proto  sync.cpp
src/commonlib/clustermap/test/: CMClientTool.h  ClustermapServerTest.cpp  ClustermapServerTool.h  Makefile.am  NodeinfoTool.h  cm.xml  dotest.cpp
src/commonlib/framework/: configure.ac
src/commonlib/framework/include/: Makefile.am
src/commonlib/framework/src/: Cache.cpp  Command.cpp  Compressor.cpp  ConnectionPool.cpp  Dispatcher.cpp  Makefile.am  MemPoolFactory.cpp  ParallelCounter.cpp  (+10 more)
src/commonlib/scws-1.2.0/: COPYING  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in
src/detail_server/: Makefile.am  autogen.sh  configure.ac  kingso_detail.spec.in
src/detail_server/conf/: Makefile.am  detail_log.cfg  detail_module.xml  detail_server.cfg
src/detail_server/src/: DetailServer.cc  DetailServer.h  Makefile.am  ks_detail_server.cc
src/index_lib/: Makefile.am  configure.ac  pujian.configure.sh  shituo.configure.sh  yewang.configure.sh
src/index_lib/rundata/: provcity.txt
src/index_lib/src/: DocIdManager.cpp  IncManager.cpp  IndexConfigParams.cpp  IndexLib.cpp  LatLngManager.cpp  Makefile.am  Makefile.yewang  ProvCityManager.cpp  RealPostFeeManager.cpp  varint.cpp
src/index_lib/test/: Makefile.am
src/index_lib/tools/: DocIdDictChecker.cpp  DocIdDictCreater.cpp  FindNidInTerm.cpp  Makefile  MlrEncoder.cpp  TermLenChecker.cpp  nidListCompare.cpp
src/libbuild/: Makefile.am  configure.ac
src/libbuild/conf/: Makefile.am  build_conf.xml
src/libbuild/include/: Makefile.am
src/libbuild/src/: Makefile.am  ksb_auction.cpp  ksb_config.cpp  ksb_helper.cpp  ksb_helper.h  ksb_parser.cpp  ksb_result.cpp  ksb_stopword.cpp  ksb_stopword.h  ksb_ws.cpp  ksb_ws.h  match_tree.cpp  match_tree.h
src/libbuild/test/: Makefile.am  test_build.cpp
src/merger/: Makefile.am  configure.ac
src/merger/conf/: Makefile.am  merger_log.cfg  merger_module.xml  merger_server.cfg  merger_sort.xml
src/merger/test/: Makefile.am  ks_merger_talker.cc
src/queryparser/: Makefile.am  configure.ac
src/queryparser/include/: Makefile.am
src/queryparser/src/: Makefile.am
src/queryparser/test/: blender_test.cc  searcher_test.cc
src/search/: Makefile.am  configure.ac
src/search/include/: Makefile.am
src/search/src/: AndExecutor.cpp  AndExecutor.h  AttrFilter.cpp  AttrFilter.h  BitAttrFilter.cpp  BitAttrFilter.h  BitmapIndexFilter.h  CfgManager.cpp  CfgManager.h  DeleteMapFilter.h  DoubleAttrFilter.cpp  DoubleAttrFilter.h  Executor.cpp  Executor.h  FilterFactory.cpp  FilterFactory.h  FilterInterface.cpp  FilterInterface.h  FloatAttrFilter.cpp  FloatAttrFilter.h  IntAttrFilter.cpp  IntAttrFilter.h  LatLngAttrFilter.cpp  LatLngAttrFilter.h  Makefile.am  NotExecutor.cpp  NotExecutor.h  OccFilter.cpp  OccFilter.h  OccPostExecutor.cpp  OccPostExecutor.h  OccSinglePostExecutor.cpp  OccSinglePostExecutor.h  OccWeightCalculator.cpp  OccWeightCalculator.h  OnlineFilter.h  OrExecutor.cpp  OrExecutor.h  PhraseExecutor.cpp  PhraseExecutor.h  (+18 more)
src/search/test/: Makefile.am  a.pl  test.cpp  test.sh
src/searcher/: Makefile.am  configure.ac  kingso_searcher.spec.in
src/searcher/conf/: Makefile.am  searcher_log.cfg  searcher_module.xml  searcher_server.cfg
src/searcher/scripts/: Makefile.am  TopQuery.conf  getTopQuery.sh
src/searcher/src/: Document.h  FormatProcessor.cpp  FormatProcessor.h  Makefile.am  ResultFormat.cpp  ResultFormat.h  ResultSerializer.cpp  ResultSerializer.h  SearcherServer.cpp  SearcherServer.h  ks_searcher_server.cpp  searcher.h
src/sort/: configure.ac
src/sort/conf/: blender_sort.xml  searcher_sort.xml
src/sort/include/: Makefile.am
src/sort/src/: AppManage.cpp  AppManage.h  Makefile.am  MergerSortFacade.cpp  SearchSortFacade.cpp  SortCfgInfo.h  SortConfig.cpp  SortConfig.h  SortQuery.cpp  SortQuery.h  SortResult.cpp
src/update/: Makefile.am  configure.ac
src/update/conf/: Makefile.am  cluster.xml  update_log.cfg  update_server.cfg
src/update/include/: Makefile.am
src/update/src/: Makefile.am  UpdaterServer.cpp  UpdaterServer.h
src/update/test/: FileQueue_test.cc  Makefile.am  dotest.cpp  frame_plugin_test.cc  frame_talker.cc  simulator.cc  testTaskQueue.cpp  testTaskQueue.h
(+693 files in other folders)
